working build system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,16 +49,20 @@ endif()
 set(LIBBPF_INCLUDE_DIRS ${CMAKE_CURRENT_BINARY_DIR}/libbpf)
 set(LIBBPF_LIBRARIES ${CMAKE_CURRENT_BINARY_DIR}/libbpf/libbpf.a)
 
-set(BPF_C_FILE ${CMAKE_CURRENT_SOURCE_DIR}/watch.bpf.c})
+set(BPF_C_FILE ${CMAKE_CURRENT_SOURCE_DIR}/watch.bpf.c)
 set(BPF_O_FILE ${CMAKE_CURRENT_BINARY_DIR}/watch.bpf.o)
 
-add_custom_command(OUTPUT ${BPF_O_FILE}
-  COMMAND ${BPFOBJECT_CLANG_EXE} -g -O2 -target bpf
-          -isystem ${LIBBPF_INCLUDE_DIRS} -c ${BPF_C_FILE} -o ${BPF_O_FILE}
-  COMMAND_EXPAND_LISTS
-  VERBATIM
-  DEPENDS ${BPF_C_FILE}
-  COMMENT "[clang] Building BPF object: ${name}")
+add_custom_target(watch-ebpf 
+  COMMAND clang -g -O2 -target bpf
+          -I ${LIBBPF_INCLUDE_DIRS} -c ${BPF_C_FILE} -o ${BPF_O_FILE}
+  VERBATIM 
+)
+
+set(BPF_SKEL_FILE ${CMAKE_CURRENT_SOURCE_DIR}/watch_skel.h)
+add_custom_target(watch-ebpf-skel
+  COMMAND bash -c "${BPFOBJECT_BPFTOOL_EXE} gen skeleton ${BPF_O_FILE} > ${BPF_SKEL_FILE}"
+  VERBATIM 
+)
 
 add_executable(${PROJECT_NAME} watch.c)
 target_include_directories(${PROJECT_NAME} PRIVATE ${LIBBPF_INCLUDE_DIRS})
